--- a/public/css/style.css
+++ b/public/css/style.css
@@ -324,59 +324,48 @@ header .fa-arrow-left {
 /* bouton de chaque plat*/
 .menustep {
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 0.9rem;
+  height: 80px;
+  font-size: 0.8rem;
   background-color: white;
-  position: relative;
   cursor: pointer;
   margin: 15px;
   padding-left: 15px;
   border-radius: 20px;
   -webkit-box-shadow: 4px 4px 6px #bdbdbd;
           box-shadow: 4px 4px 6px #bdbdbd;
-  /*apparition coche verte*/
-}
-
-.menustep:hover {
-  /* rotation  coche verte */
+  -webkit-transition: -webkit-transform;
+  transition: -webkit-transform;
+  transition: transform;
+  transition: transform, -webkit-transform;
+  /*apparition et mouvement coche verte*/
 }
 
 .menustep:hover .check {
-  -webkit-transform: translate(-95px);
-          transform: translate(-95px);
-  -webkit-transition: -webkit-transform 1500ms;
-  transition: -webkit-transform 1500ms;
-  transition: transform 1500ms;
-  transition: transform 1500ms, -webkit-transform 1500ms;
+  -webkit-animation: check 350ms ease-in-out;
+          animation: check 350ms ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.menustep:hover .fas {
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-  -webkit-transition: -webkit-transform 1000ms 500ms;
-  transition: -webkit-transform 1000ms 500ms;
-  transition: transform 1000ms 500ms;
-  transition: transform 1000ms 500ms, -webkit-transform 1000ms 500ms;
+.menustep:hover .fa-check-circle {
+  -webkit-animation: turncheck 350ms 150ms;
+          animation: turncheck 350ms 150ms;
 }
 
 .menustep:hover .menu__price {
-  -webkit-transform: translate(-65px);
-          transform: translate(-65px);
-  -webkit-transition: -webkit-transform 1500ms;
-  transition: -webkit-transform 1500ms;
-  transition: transform 1500ms;
-  transition: transform 1500ms, -webkit-transform 1500ms;
+  -webkit-animation: price 350ms ease-in-out;
+          animation: price 350ms ease-in-out;
 }
 
 .menu__choice {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 85%;
+  width: 100%;
 }
 
 .menu__choice h4 {
@@ -389,11 +378,11 @@ header .fa-arrow-left {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 90%;
+  width: 80%;
 }
 
 .menu__price {
-  width: 15%;
+  width: 20%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -405,16 +394,11 @@ header .fa-arrow-left {
 
 /*bloc de validation choix*/
 .check {
-  position: absolute;
-  bottom: 0px;
-  right: -100px;
   background-color: #99e2d0;
-  width: 20%;
+  width: 40%;
   height: 100%;
   border-radius: 0 20px 20px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -423,13 +407,14 @@ header .fa-arrow-left {
           align-items: center;
 }
 
-.check .fas {
+.check .fa-check-circle {
   color: white;
   font-size: 1.5rem;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
 }
 
+/* bouton couleur pour commander*/
 .command {
   background-color: #f0f0f0;
   display: -webkit-box;
@@ -536,6 +521,72 @@ header .fa-arrow-left {
   }
   from {
     opacity: 1;
+  }
+}
+
+/* animation coche choix plat */
+@-webkit-keyframes check {
+  0% {
+    -webkit-transform: translate(60px, 0);
+            transform: translate(60px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0);
+            transform: translate(0px, 0);
+  }
+}
+@keyframes check {
+  0% {
+    -webkit-transform: translate(60px, 0);
+            transform: translate(60px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0);
+            transform: translate(0px, 0);
+  }
+}
+
+@-webkit-keyframes turncheck {
+  0% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes turncheck {
+  0% {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@-webkit-keyframes price {
+  0% {
+    -webkit-transform: translate(65px, 0);
+            transform: translate(65px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0);
+            transform: translate(0px, 0);
+  }
+}
+
+@keyframes price {
+  0% {
+    -webkit-transform: translate(65px, 0);
+            transform: translate(65px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0);
+            transform: translate(0px, 0);
   }
 }
 
