--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,6 +7,7 @@ body
   width: 100%;
   box-sizing: border-box;
 }
+
 /*Titre h2 police differente*/
 .name 
 {
@@ -20,7 +21,8 @@ a
   color: black;
 }
 
-i /*couleur par défaut des icones*/
+/*couleur par défaut des icones*/
+i 
 {
   color: $color-grey;
 }
@@ -92,5 +94,4 @@ footer
     left: 0; 
     z-index: -1;
   }
-
 }
